--- a/TODO
+++ b/TODO
@@ -4,7 +4,7 @@ branches from main, e.g. activities, stuff and dailystuff (e.g. household-chores
 extra field for extra info for tasks/stuff
 subtasks/stuff 
 link to lightning/bitcoin-rpc?
-colors!!
+colorschemes?
 temprooms for certain-tasks?
 ask for confirmation when destroying tables/rooms
 deadlines
